Implement users/me endpoint